--- a/src/app/pages/dashboard/dashboard.page.scss
+++ b/src/app/pages/dashboard/dashboard.page.scss
@@ -168,7 +168,7 @@ ion-content {
     .inner-wrap {
       display: flex;
       flex-direction: column;
-      gap: 7px;
+      gap: 30px;
       padding-bottom: 41px;
 
 
